# barock

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.org
cmake/: wayland.cmake
include/barock/: compositor.hpp  fbo.hpp  hotkey.hpp  input.hpp  resource.hpp  singleton.hpp  util.hpp
include/barock/core/: animation.hpp  config.hpp  cursor_manager.hpp  event_bus.hpp  event_loop.hpp  input.hpp  metadata.hpp  output.hpp  output_manager.hpp  point.hpp  quad_tree.hpp  region.hpp  renderer.hpp  shm.hpp  shm_pool.hpp  signal.hpp  surface.hpp  wl_compositor.hpp  wl_data_device_manager.hpp  wl_output.hpp  wl_seat.hpp  wl_subcompositor.hpp  wl_surface.hpp
include/barock/dmabuf/: buffer.hpp  dmabuf.hpp  feedback.hpp
include/barock/render/: opengl.hpp
include/barock/script/: interop.hpp  janet.hpp
include/barock/shell/: xdg_surface.hpp  xdg_toplevel.hpp  xdg_wm_base.hpp
include/drm/: CMakeLists.txt  README.org  minidrm.hpp
include/jsl/: cow.hpp  int_types.hpp  move.hpp  optional.hpp  result.hpp  type_traits.hpp
src/: compositor.cpp  fbo.cpp  hotkey.cpp  input.cpp  log.cpp  log.hpp  main.cpp  util.cpp
src/core/: config.cpp  cursor_manager.cpp  event_loop.cpp  input.cpp  output.cpp  output_manager.cpp  region.cpp  shm.cpp  shm_pool.cpp  signal.cpp  surface.cpp  wl_compositor.cpp  wl_data_device_manager.cpp  wl_output.cpp  wl_seat.cpp  wl_subcompositor.cpp  wl_surface.cpp
src/dmabuf/: buffer.cpp  dmabuf.cpp  feedback.cpp
src/drm/: minidrm.cpp  minidrm.hpp
src/render/: opengl.cpp
src/script/: compositor.cpp  cursor.cpp  hotkey.cpp  janet.cpp  output.cpp  xdg_shell.cpp
src/shell/: xdg_surface.cpp  xdg_toplevel.cpp  xdg_wm_base.cpp
